# ESP32_easyio_test

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/drive/: CMakeLists.txt  font.h  led.c  spi_config.h  spi_lcd.c  spi_lcd.h  sys_config.h  ws2812_ctrl.c  ws2812_ctrl.h
main/: Kconfig.projbuild  main.c
